feat: create customer function

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <label>name: <input type="text" name="customer"></label><br>
     <label>ssh route: <input type="text" name="ssh_ip"></label><br>
     <label>account: <input type="text" name="ssh_account"></label><br>
-    <label>password: <input type="password" name="ssh_password"></label><br>
+    <label>password: <input type="text" name="ssh_password"></label><br>
     <input type="submit" value="add">
   </form>
   <hr>
