--- a/templates/index.html
+++ b/templates/index.html
@@ -1,92 +1,89 @@
-<h3>customer connection data<h3>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Customer Connection Data</title>
+  <!-- Link to Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    {% block navbar %}
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a class="navbar-brand">Customer Connection Data</a>
+    </nav>
+    {% endblock %}
+
+    {% block content %}
+    <!-- table -->
+    
+    <!-- Your form and search UI go here -->
+    <div class="dropdown">
+      <button class="btn btn-outline-primary dropdown-toggle" type="button" id="customerDropdown" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Select a Customer
+      </button>
+      <div class="dropdown-menu" aria-labelledby="customerDropdown" id="customerList">
+        <!-- Customer list will be populated here -->
+      </div>
+    </div>
+    <div id="customerDetails" class="mt-3">
+      <!-- Customer data will appear here after selection -->
+    </div>
+    <hr>
     <form action="/create" method="POST">
-      <label>Name<input type="text" name="customer"></label><br>
-      <label>SSH<input type="text" name="ssh_ip"></label><br>
-      <label>Account<input type="text" name="ssh_account"></label><br>
-      <label>Password<input type="text" name="ssh_password"></label><br>
-      <label>MONGO HOST<input type="text" name="mongo_host"></label><br>
-      <label>MONGO PASSWORD<input type="text" name="mongo_pwd"></label><br>
-      <label>REDIS HOST<input type="text" name="redis_host"></label><br>
-      <label>REDIS PASSWORD<input type="text" name="redis_pwd"></label><br>
-      <label>MINIO HOST<input type="text" name="minio_host"></label><br>
-      <label>MINIO PASSWORD<input type="text" name="minio_pwd"></label><br>
-      <input type="submit" value="add">
+      <div class="form-group m-1">
+        <label>Name<input type="text" name="customer" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>SSH<input type="text" name="ssh_ip" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>Account<input type="text" name="ssh_account" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>Password<input type="text" name="ssh_password" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>MONGO HOST<input type="text" name="mongo_host" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>MONGO PASSWORD<input type="text" name="mongo_pwd" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>REDIS HOST<input type="text" name="redis_host" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>REDIS PASSWORD<input type="text" name="redis_pwd" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>MINIO HOST<input type="text" name="minio_host" class="ml-3"></label>
+      </div>
+      <div class="form-group m-1">
+        <label>MINIO PASSWORD<input type="text" name="minio_pwd" class="ml-3"></label><br>
+      </div>
+      <div class="form-group m-1">
+        <label>Notes
+        <textarea name="notes" id="notes" rows="4" class="form-control mt-1" placeholder="..."></textarea></label>
+      </div>
+      <button type="submit" class="btn btn-outline-success">create</button>
+      <!-- <input type="submit" value="create"> -->
     </form>
     <hr>
-    <form action="/search" method="get" id="searchForm">
-      <label>find by customer <input type="text" name="customer_name"></label>
-      <button type="submit">Search</button>
-    </form>
-    <div id="results"></div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $('#searchForm').submit(function (e) {
-          e.preventDefault();
-          $.ajax({
-            url: '/search',
-            method: 'GET',
-            data: $(this).serialize(),
-            dataType: 'json',
-            success: function (response) {
-              let resultsHtml = ``
-              response.customer_lists.forEach(function (item) {
-                resultsHtml += `
-                  <div>${item.customer_name}</div>
-                  <div class='code-block'>
-                    <code id="code-ssh_ip">${item.ssh_ip}</code>
-                    <button onclick="copyToClipboard('code-ssh_ip')">Copy</button>
-                    </br>
-                    <code id="code-ssh_password">${item.ssh_password}</code>
-                    <button onclick="copyToClipboard('code-ssh_password')">Copy</button>
-                    </br>
-                    <code id="code-mongo_host">${item.mongo_host}</code>
-                    <button onclick="copyToClipboard('code-mongo_host')">Copy</button>
-                    </br>
-                    <code id="code-mongo_pwd">${item.mongo_pwd}</code>
-                    <button onclick="copyToClipboard('code-mongo_pwd')">Copy</button>
-                    </br>
-                    <code id="code-redis_host">${item.redis_host}</code>
-                    <button onclick="copyToClipboard('code-redis_host')">Copy</button>
-                    </br>
-                    <code id="code-redis_pwd">${item.redis_pwd}</code>
-                    <button onclick="copyToClipboard('code-redis_pwd')">Copy</button>
-                    </br>
-                    <code id="code-minio_host">${item.minio_host}</code>
-                    <button onclick="copyToClipboard('code-minio_host')">Copy</button>
-                    </br>
-                    <code id="code-minio_pwd">${item.minio_pwd}</code>
-                    <button onclick="copyToClipboard('code-minio_pwd')">Copy</button>
-                  </div>`;
-              });
+  </div>
+  {% endblock %}
+  </div>
 
-              $('#results').html(resultsHtml);
-            },
-            error: function (xhr, status, error) {
-              var errorMessage = (error.responseText || error.message) || 'An error occurred';
-              $('#results').html(`<p class="alert alert-danger">${errorMessage}</p>`);
-            }
-          });
-        });
-      });
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-      function copyToClipboard(elementId) {
-        const textToCopy = document.getElementById(elementId).innerText;
-        navigator.clipboard.writeText(textToCopy).then(() => {
-          console.log('Copied to clipboard!');
-        }).catch(err => {
-          console.error("Failed to copy: ", err);
-        });
-      }
+  <script src="{{ url_for('static', filename='js/api.js') }}"></script>
+</body>
 
-    </script>
-    <style>
-      .code-block {
-        background-color: #f4f4f4;
-        padding: 10px;
-        margin: 5px 0;
-        border-radius: 4px;
-        font-family: monospace;
-      }
-    </style>
+</html>
